added new section

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | NSUT</title>
+    <title>About Us | JCCC</title>
     <link rel="icon" href="Images/favicon.png">
 
     <link rel="stylesheet" href="style.css">
@@ -25,7 +25,7 @@
         <nav>
 
             <a href="index.html"><img src="Images/logo.png"></a>
-            <h1>Netaji Subhas University of Technology</h1>
+            <h1>JCCC COLLEGE</h1>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -51,25 +51,25 @@
 
         <div class="row">
             <div class="about-col">
-                <h1>Netaji Subhas University of Technology</h1>
+                <h1>JCCC COLLEGE</h1>
                 <p>
-                    <b>Netaji Subhas University of Technology (NSUT) is a seat of higher technical education in
+                    <b>JCCC COLLEGE (JCCC) is a seat of higher technical education in
                         India.</b>
                     Prof. Jai Prakash Saini
-                    is the Founder Vice-Chancellor of Netaji Subhas University of Technology (NSUT), New Delhi. “The
+                    is the Founder Vice-Chancellor of JCCC COLLEGE (JCCC), New Delhi. “The
                     Delhi Netaji Subhas
                     University of Technology Act, 2017 (DELHI ACT 06 OF 2018) (As passed by the Legislative Assembly of
                     the National Capital
                     Territory of Delhi on the 10th August, 2017) An Act to to provide for the reconstitution and
                     upgradation of the Netaji
-                    Subhas University of Technology as a non-affiliating Netaji Subhas University of Technology, and to
+                    Subhas University of Technology as a non-affiliating JCCC COLLEGE, and to
                     provide for
                     education and research in branches of engineering, technology, sciences, humanities, social sciences
                     and management and
                     for the advancement of learning and dissemination of knowledge in such branches and for certain
                     other matters connected
                     therewith or incidental thereto; <br> <br>
-                    Previously NSUT is an Autonomous Institution under Govt. of NCT of Delhi and affiliated to
+                    Previously JCCC is an Autonomous Institution under Govt. of NCT of Delhi and affiliated to
                     University of Delhi, Netaji
                     Subhas University of Technology is a seat of higher technical education in India. It was established
                     in the year 1983 as
@@ -172,7 +172,7 @@
             </div>
 
             <div class="foot-col">
-                <p>Netaji Subhas University of Technology(NSUT)</p>
+                <p>JCCC COLLEGE(JCCC)</p>
                 <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
             </div>
 
