--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | NSUT</title>
+    <title>Contact | JCCC</title>
     <link rel="icon" href="Images/favicon.png">
 
     <link rel="stylesheet" href="style.css">
@@ -25,7 +25,7 @@
         <nav>
 
             <a href="index.html"><img src="Images/logo.png"></a>
-            <h1>Netaji Subhas University of Technology</h1>
+            <h1>JCCC COLLEGE</h1>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -62,15 +62,15 @@
                 <div>
                     <i class="fa fa-home"></i>
                     <span>
-                        <h5>Azad Hind Fauj Marg, Dwarka Sector-3, Dwarka 110078</h5>
-                        <p>Delhi, India.</p>
+                        <h5>101, Napier Town ,Near Shastri Bridge, Jabalpur, 482002</h5>
+                        <p>Madhya Pradesh, India.</p>
                     </span>
                 </div>
 
                 <div>
                     <i class="fa fa-phone"></i>
                     <span>
-                        <h5>011 2500 0268</h5>
+                        <h5>+918989893111/+919754220888</h5>
                         <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
                     </span>
                 </div>
@@ -78,7 +78,7 @@
                 <div>
                     <i class="fa fa-envelope"></i>
                     <span>
-                        <h5>academic@nsut.ac.in</h5>
+                        <h5>academic@JCCC.ac.in</h5>
                         <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
                     </span>
                 </div>
@@ -109,7 +109,6 @@
                     <li><a href="#">Centres</a></li>
                     <li><a href="#">Facilities</a></li>
                     <li><a href="#">Notices</a></li>
-                    <li><a href="#">UMS</a></li>
                 </ul>
             </div>
 
@@ -136,7 +135,7 @@
             </div>
 
             <div class="foot-col">
-                <p>Netaji Subhas University of Technology(NSUT)</p>
+                <p>JCCC COLLEGE(JCCC)</p>
                 <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
             </div>
 
