--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses | NSUT</title>
+    <title>Courses | JCCC</title>
     <link rel="icon" href="Images/favicon.png">
 
     <link rel="stylesheet" href="style.css">
@@ -25,7 +25,7 @@
         <nav>
 
             <a href="index.html"><img src="Images/logo.png"></a>
-            <h1>Netaji Subhas University of Technology</h1>
+            <h1>JCCC COLLEGE</h1>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="course-col">
                 <h3>Undergraduate Programmes</h3>
-                <p>NSUT offers following branches B.Tech Programmes at the Undergraduate Level:</p>
+                <p>JCCC offers following branches B.Tech Programmes at the Undergraduate Level:</p>
                 <p>
                     1. B.Tech In Electronics And Communication Engineering <br>
                     2. B.Tech In Computer Engineering <br>
@@ -69,7 +69,7 @@
 
             <div class="course-col">
                 <h3>Postgraduate Programmes</h3>
-                <p>At the Post-Graduate(M.Tech.) level NSUT has the following programs:</p>
+                <p>At the Post-Graduate(M.Tech.) level JCCC has the following programs:</p>
                 <p>
                     1. M.Tech. In Computer Science <br>
                     2. M.Tech. In Signal Processing <br>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="foot-col">
-                <p>Netaji Subhas University of Technology(NSUT)</p>
+                <p>JCCC COLLEGE(JCCC)</p>
                 <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
             </div>
 
