added assests and new component

--- a/about.html
+++ b/about.html
@@ -56,11 +56,10 @@
                     <b>JCCC COLLEGE (JCCC) is a seat of higher technical education in
                         India.</b>
                     Prof. Jai Prakash Saini
-                    is the Founder Vice-Chancellor of JCCC COLLEGE (JCCC), New Delhi. “The
-                    Delhi Netaji Subhas
-                    University of Technology Act, 2017 (DELHI ACT 06 OF 2018) (As passed by the Legislative Assembly of
+                    is the Founder Vice-Chancellor of JCCC COLLEGE (JCCC), New Jabalpur. “The
+                    JCCC College Act, 2017 (Jabalpur ACT 06 OF 2018) (As passed by the Legislative Assembly of
                     the National Capital
-                    Territory of Delhi on the 10th August, 2017) An Act to to provide for the reconstitution and
+                    Territory of Jabalpur on the 10th August, 2017) An Act to to provide for the reconstitution and
                     upgradation of the Netaji
                     Subhas University of Technology as a non-affiliating JCCC COLLEGE, and to
                     provide for
@@ -69,11 +68,11 @@
                     for the advancement of learning and dissemination of knowledge in such branches and for certain
                     other matters connected
                     therewith or incidental thereto; <br> <br>
-                    Previously JCCC is an Autonomous Institution under Govt. of NCT of Delhi and affiliated to
-                    University of Delhi, Netaji
+                    Previously JCCC is an Autonomous Institution under Govt. of NCT of Jabalpur and affiliated to
+                    University of Jabalpur, Netaji
                     Subhas University of Technology is a seat of higher technical education in India. It was established
                     in the year 1983 as
-                    Delhi Institute of Technology with the objective of meeting the growing demands of manpower in the
+                    Jabalpur Institute of Technology with the objective of meeting the growing demands of manpower in the
                     emerging fields of
                     engineering and technology with a close social and industrial interface. Over a period of time, the
                     institute has carved
@@ -173,7 +172,7 @@
 
             <div class="foot-col">
                 <p>JCCC COLLEGE(JCCC)</p>
-                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
+                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Jabalpur)</p>
             </div>
 
         </div>
