--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <div class="location">
 
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14010.633789636884!2d77.0379647!3d28.6100216!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d05dd375e5a13%3A0x108adaa3abe4bd07!2sNetaji%20Subhas%20University%20of%20Technology!5e0!3m2!1sen!2sin!4v1698415188665!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14673.304787005853!2d79.9293016!3d23.1582918!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3981ae064c9ff93d%3A0x8f592c2acb6809a7!2sJabalpur%20College%20of%20Computers%20and%20Communication!5e0!3m2!1sen!2sin!4v1702320658020!5m2!1sen!2sin"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
@@ -136,7 +136,7 @@
 
             <div class="foot-col">
                 <p>JCCC COLLEGE(JCCC)</p>
-                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
+                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Jabalpur)</p>
             </div>
 
         </div>
