--- a/courses.html
+++ b/courses.html
@@ -144,7 +144,7 @@
 
             <div class="foot-col">
                 <p>JCCC COLLEGE(JCCC)</p>
-                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Delhi)</p>
+                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Jabalpur)</p>
             </div>
 
         </div>
