--- a/contact.html
+++ b/contact.html
@@ -1,166 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Page Metadata -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Brief description of your website or page content.">
+    <meta name="keywords" content="bba in jabalpur, bca in jabalpur, bba colleges in jabalpur, bca colleges in jabalpur, bba colleges in jabalpur fees, bba course in jabalpur, bba fees in jabalpur, bba llb colleges in jabalpur, bca course in jabalpur, bca fees in jabalpur, bca government colleges in jabalpur, best bba colleges in jabalpur, best colleges for bba in jabalpur, best colleges for bca in jabalpur, government bba colleges in jabalpur, jabalpur bba colleges, top bba colleges in jabalpur, top bca colleges in jabalpur, mcom in jabalpur">
+    <!-- for better social media handling -->
+    <meta property="og:title" content="JCCC College - Your Title Here">
+    <meta property="og:description" content="Brief description of your website or page content.">
+    <meta property="og:image" content="URL to an image representing your page">
+    <meta property="og:url" content="https://www.jccccollege.in/index.html">
+    
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | JCCC</title>
-    <link rel="icon" href="Images/favicon.png">
 
-    <link rel="stylesheet" href="style.css">
+    <title>Homepage | JCCC</title>
+    <link rel="icon" href="Images/favicon.png" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-</head>
-
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <section class="sub-header">
-        <nav>
+      <nav>
+        <a href="index.html"><img src="Images/logo.png" /></a>
+        <h1>JCCC COLLEGE</h1>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="courses.html">COURSES</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
 
-            <a href="index.html"><img src="Images/logo.png"></a>
-            <h1>JCCC COLLEGE</h1>
-            <div class="nav-links" id="navLinks">
-                <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><audio controls src="Images/kulgeet_mp3.mp3"></audio></li>
-                </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
-
-        </nav>
-
-        <h1>Contact Us</h1>
-
+      <h1>Contact Us</h1>
     </section>
 
     <!-- Contact Us -->
 
     <div class="location">
-
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14673.304787005853!2d79.9293016!3d23.1582918!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3981ae064c9ff93d%3A0x8f592c2acb6809a7!2sJabalpur%20College%20of%20Computers%20and%20Communication!5e0!3m2!1sen!2sin!4v1702320658020!5m2!1sen!2sin"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14673.304787005853!2d79.9293016!3d23.1582918!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3981ae064c9ff93d%3A0x8f592c2acb6809a7!2sJabalpur%20College%20of%20Computers%20and%20Communication!5e0!3m2!1sen!2sin!4v1702320658020!5m2!1sen!2sin"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      >
+      </iframe>
     </div>
 
     <div class="contact-us">
-        <div class="row">
-            <div class="contact-col">
-                <div>
-                    <i class="fa fa-home"></i>
-                    <span>
-                        <h5>101, Napier Town ,Near Shastri Bridge, Jabalpur, 482002</h5>
-                        <p>Madhya Pradesh, India.</p>
-                    </span>
-                </div>
+      <div class="row">
+        <div class="contact-col">
+          <div>
+            <i class="fa fa-home"></i>
+            <span>
+              <h5>101, Napier Town ,Near Shastri Bridge, Jabalpur, 482002</h5>
+              <p>Madhya Pradesh, India.</p>
+            </span>
+          </div>
 
-                <div>
-                    <i class="fa fa-phone"></i>
-                    <span>
-                        <h5>+918989893111/+919754220888</h5>
-                        <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
-                    </span>
-                </div>
+          <div>
+            <i class="fa fa-phone"></i>
+            <span>
+              <h5>+918989893111/+919754220888</h5>
+              <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
+            </span>
+          </div>
 
-                <div>
-                    <i class="fa fa-envelope"></i>
-                    <span>
-                        <h5>academic@JCCC.ac.in</h5>
-                        <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
-                    </span>
-                </div>
-            </div>
-
-            <div class="contact-col">
-
-                <form action="#">
-                    <input type="text" placeholder="Enter your name" required>
-                    <input type="email" placeholder="Enter your email address" required>
-                    <input type="text" placeholder="Enter your subject" required>
-                    <textarea rows="8" placeholder="Message" required></textarea>
-                    <button type="submit" class="hero-btn blue-btn">Send Message</button>
-                </form>
-
-            </div>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <span>
+              <h5>academic@JCCC.ac.in</h5>
+              <p>Monday - Friday: 9:00 AM to 6:00 PM</p>
+            </span>
+          </div>
         </div>
+
+        <div class="contact-col">
+          <form id="form">
+            <input type="text" placeholder="Enter your name" required />
+            <input
+              type="email"
+              placeholder="Enter your email address"
+              required
+            />
+            <input type="text" placeholder="Enter your subject" required />
+            <textarea rows="8" placeholder="Message" required></textarea>
+            <button type="submit" class="hero-btn blue-btn">
+              Send Message
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
 
     <footer>
-
-        <div class="row">
-            <div class="foot-col">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">Faculties</a></li>
-                    <li><a href="#">Departments</a></li>
-                    <li><a href="#">Centres</a></li>
-                    <li><a href="#">Facilities</a></li>
-                    <li><a href="#">Notices</a></li>
-                </ul>
-            </div>
-
-            <div class="foot-col">
-                <h3>Explore</h3>
-                <ul>
-                    <li><a href="#">Central Computer Centre</a></li>
-                    <li><a href="#">Campus Life</a></li>
-                    <li><a href="#">University Newsletter</a></li>
-                    <li><a href="#">Educational Programmes</a></li>
-                    <li><a href="#">Social Initiatives</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
-
-            <div class="foot-col">
-                <h3>Social Media</h3>
-                <ul>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
-                    <li><a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a></li>
-                </ul>
-            </div>
-
-            <div class="foot-col">
-                <p>JCCC COLLEGE(JCCC)</p>
-                <p>Formerly Netaji Subhas Institute of Technology(NSIT) <br><br> (Govt. of NCT of Jabalpur)</p>
-            </div>
-
+      <div class="row">
+        <div class="foot-col">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Faculties</a></li>
+            <li><a href="#">Departments</a></li>
+            <li><a href="#">Centres</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">Notices</a></li>
+          </ul>
         </div>
 
+        <div class="foot-col">
+          <h3>Explore</h3>
+          <ul>
+            <li><a href="#">Central Computer Centre</a></li>
+            <li><a href="#">Campus Life</a></li>
+            <li><a href="#">University Newsletter</a></li>
+            <li><a href="#">Educational Programmes</a></li>
+            <li><a href="#">Social Initiatives</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <h3>Social Media</h3>
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <p>JCCC COLLEGE(JCCC)</p>
+          <p>
+            Formerly Netaji Subhas Institute of Technology(NSIT) <br /><br />
+            (Govt. of NCT of Jabalpur)
+          </p>
+        </div>
+      </div>
     </footer>
-
-
 
     <!-- JS for Toggle menu -->
 
     <script>
+      var navLinks = document.getElementById("navLinks");
 
-        var navLinks = document.getElementById("navLinks");
+      function showMenu() {
+        navLinks.style.right = "0";
+      }
 
-        function showMenu() {
-            navLinks.style.right = "0";
-        }
-
-        function hideMenu() {
-            navLinks.style.right = "-200px";
-        }
-
+      function hideMenu() {
+        navLinks.style.right = "-200px";
+      }
     </script>
+    <script>
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbz2WB13PBvrAjg3E3NWVmkYYOJnODIWp4jEETY26ZDHasPbbkfRE8Y0uXE3K70W7XiZGw/exec";
+      const form = document.querySelector("#form");
+      const btn = document.querySelector("#submit");
 
-</body>
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        btn.disabled = true;
+        btn.innerHTML = "Loading...";
 
+        console.log(form);
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            btn.disabled = false;
+            btn.innerHTML = "Submit";
+            alert("Success!", response);
+          })
+          .catch((error) => {
+            btn.disabled = false;
+            btn.innerHTML = "Submit";
+            alert("Error!", error.message);
+          });
+      });
+    </script>
+  </body>
 </html>
